--- a/P1/index.html
+++ b/P1/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+
     <title>Tienda de posters</title>
 </head>
 <body>
@@ -34,6 +36,7 @@
             </div>
         </div>
     </main>
+
 
     <footer>
         <p>&copy; 2023 Tienda Online. Todos los derechos reservados.</p>
