--- a/P1/producto3.html
+++ b/P1/producto3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/styles.css">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/imagenes/favicon.ico" type="image/x-icon">
 
     <title>Producto 3</title>
 </head>
