mejorando css,html y producto nuevo

--- a/P1/index.html
+++ b/P1/index.html
@@ -6,33 +6,39 @@
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="icon" href="/imagenes/favicon.png" type="image/png">
 
-    <title>Tienda de posters</title>
+    <title>LA TIENDA DE LOS POSTERS</title>
 </head>
 <body>
     <header>
-        <h1>TIENDA DE POSTERS</h1>
+        <h1>LA TIENDA DE LOS POSTERS</h1>
     </header>
     
     <main>
-        <h2>Productos a la venta</h2>
+        
         <div class="productos">
             <div class="producto">
-                <h3>Producto 1</h3>
+                <h3>Billie Eilish</h3>
                 <img src="/imagenes/producto1.jpg" alt="Producto 1">
-                <p>Sobre el producto...</p>
-                <a href="/producto1">Ver más</a>
+                <p>15,00 €</p>
+                <a href="/BillieEilish">Ver más</a>
             </div>
             <div class="producto">
-                <h3>Producto 2</h3>
+                <h3>Kendrick Lamar</h3>
                 <img src="/imagenes/producto2.jpg" alt="Producto 2">
-                <p>Sobre el producto...</p>
-                <a href="/producto2">Ver más</a>
+                <p>15,00 €</p>
+                <a href="/KendrickLamar">Ver más</a>
             </div>
             <div class="producto">
-                <h3>Producto 3</h3>
+                <h3>The Weeknd</h3>
                 <img src="/imagenes/producto3.jpg" alt="Producto 3">
-                <p>Sobre el producto...</p>
-                <a href="/producto3">Ver más</a>
+                <p>15,00 €</p>
+                <a href="/TheWeeknd">Ver más</a>
+            </div>
+            <div class="producto">
+                <h3>Rihanna</h3>
+                <img src="/imagenes/producto4.jpg" alt="Producto 4">
+                <p>15,00 €</p>
+                <a href="/Rihanna">Ver más</a>
             </div>
         </div>
     </main>
