--- a/P1/producto1.html
+++ b/P1/producto1.html
@@ -6,18 +6,36 @@
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="icon" href="/imagenes/favicon.png" type="image/png">
 
-    <title>Producto 1</title>
+    <title>Billie Eilish</title>
 </head>
 <body>
     <header>
-        <h1>Producto 1</h1>
+        <h1>BILLIE EILISH</h1>
     </header>
     
     <main>
-        <div class="producto-detalle">
+        <div class="producto_detalle">
             <img src="/imagenes/producto1.jpg" alt="Producto 1">
-            <h2>Producto 1....</h2>
-            <p>Mas informacion...</p>
+            <h2>Poster canción NDA</h2>
+            <h3>Tamaños disponibles: </h3>
+            <p>
+                Póster de tamaño A0:
+                    Dimensiones: 84.1 x 118.9 cm
+            </p>
+            <p>
+                Póster de tamaño A1:
+                    Dimensiones: 59.4 x 84.1 cm
+            </p>
+                Póster de tamaño A2:
+                    Dimensiones: 42.0 x 59.4 cm
+            <p>
+                Póster de tamaño A3:
+                    Dimensiones: 29.7 x 42.0 cm
+            </p>
+            <p>
+                Póster de tamaño A4:
+                    Dimensiones: 21.0 x 29.7 cm
+            </p>
             <a href="/">Volver a la tienda</a>
         </div>
     </main>
