--- a/P1/producto2.html
+++ b/P1/producto2.html
@@ -10,14 +10,32 @@
 </head>
 <body>
     <header>
-        <h1>Producto 2</h1>
+        <h1>KENDRICK LAMAR</h1>
     </header>
     
     <main>
-        <div class="producto-detalle">
+        <div class="producto_detalle">
             <img src="/imagenes/producto2.jpg" alt="Producto 2">
-            <h2>Producto 2...</h2>
-            <p>Mas informacion...</p>
+            <h2>Poster canción DAMN.</h2>
+            <h3>Tamaños disponibles: </h3>
+            <p>
+                Póster de tamaño A0:
+                    Dimensiones: 84.1 x 118.9 cm
+            </p>
+            <p>
+                Póster de tamaño A1:
+                    Dimensiones: 59.4 x 84.1 cm
+            </p>
+                Póster de tamaño A2:
+                    Dimensiones: 42.0 x 59.4 cm
+            <p>
+                Póster de tamaño A3:
+                    Dimensiones: 29.7 x 42.0 cm
+            </p>
+            <p>
+                Póster de tamaño A4:
+                    Dimensiones: 21.0 x 29.7 cm
+            </p>
             <a href="/">Volver a la tienda</a>
         </div>
     </main>
