--- a/P1/producto4.html
+++ b/P1/producto4.html
@@ -6,20 +6,20 @@
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="icon" href="/imagenes/favicon.png" type="image/png">
 
-    <title>Producto 3</title>
+    <title>Rihanna</title>
 </head>
 <body>
     <header>
-        <h1>THE WEEKND</h1>
+        <h1>RIHANNA</h1>
     </header>
     
     <main>
         <div class="producto_detalle">
-            <img src="/imagenes/producto3.jpg" alt="Producto 3">
-            <h2>Poster The Weeknd</h2>
+            <img src="/imagenes/producto4.jpg" alt="Producto 4">
+            <h2>Poster Álbum Good Girl Gone Bad: Reloaded</h2>
             <h3>Tamaños disponibles: </h3>
             <p>
-                 Póster de tamaño A0:
+                Póster de tamaño A0:
                     Dimensiones: 84.1 x 118.9 cm
             </p>
             <p>
@@ -44,6 +44,6 @@
         <p>&copy; 2023 Tienda Online. Todos los derechos reservados.</p>
     </footer>
 
-    
+   
 </body>
 </html>
