--- a/P2/login.html
+++ b/P2/login.html
@@ -13,5 +13,6 @@
         <input type="text" name="usuario"/>
         <button type="submit">Enviar</button>
     </form>
-    <div id="message"></div></body>
+</body>
 </html>
+
