--- a/P3/public/index.html
+++ b/P3/public/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <title>Chat</title>
   <link rel="stylesheet" href="styles.css">
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="client.js"></script>
 </head>
-
 <body>
   <div id="chat">
     <div id="display"></div>
-    <input id="button" placeholder="Enviar mensaje"/>
+    <input id="msg_entry" placeholder="Enviar mensaje"/>
   </div>
+
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="client.js"></script>
 </body>
 </html>
