--- a/P3/public/index.html
+++ b/P3/public/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
   <div id="chat">
+      <header>
+        <h1>EL CHAT</h1>
+      </header>
     <div id="display"></div>
+    <div id="typingIndicator" style="display: none;">Usuario escribiendo...</div>
     <input id="msg_entry" placeholder="Enviar mensaje"/>
   </div>
 
