--- a/P4/public/index.html
+++ b/P4/public/index.html
@@ -2,8 +2,10 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self';" />
   <title>Chat</title>
   <link rel="stylesheet" href="styles.css">
+  <script src="server.js" defer></script>
 </head>
 <body>
   <div id="chat">
