comunicacion proceso principal y renderizado. ejercicio 4

--- a/P4/public/index.html
+++ b/P4/public/index.html
@@ -25,9 +25,11 @@
         <li>Ip: <span id="info4" class="blue"></span></li>
 
     </ul>
-    <hr>
+  </hr>
+  <h3>
+    <p>Mensajes enviados desde el proceso main:</p>
+    <p>Print:  <span id='print' class="red"></span> </p>
+  </h3>
     <p>   <input type="button" value="Test" id="btn_test"> </p>
-   <p>Display:</p>
-
 </body>
 </html>
