--- a/P4/public/index.html
+++ b/P4/public/index.html
@@ -23,6 +23,8 @@
         <li>Versión chrome: <span id="info2" class="blue"></span></li>
         <li>Versión electron: <span id="info3" class="blue"></span></li>
         <li>Ip: <span id="info4" class="blue"></span></li>
+        <li>Arquitectura: <span id="info5" class="blue"></span></li>
+        <li>Plataforma: <span id="info6" class="blue"></span></li>
 
     </ul>
   </hr>
